fixed duplication and aligned breakpoints

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -39,7 +39,7 @@ $font-jost: 'Jost', sans-serif;
 $font-poppins: 'Poppins', sans-serif;
 
 // Breakpoints
-$mobile: 740px;
+$mobile: 767px;
 $tablet: 768px;
 $desktop: 1024px;
 
